--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,21 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.gradle
+/.settings
+/build
+/eclipse
+/run
+/MinecraftForge-Credits.txt
+/Paulscode IBXM Library License.txt
+/Paulscode SoundSystem CodecIBXM License.txt
+/README.txt
+/.classpath
+/.project
+/Codeic_Client.launch
+/Codeic_Server.launch
+/CREDITS-fml.txt
+/forge-1.11.2-13.20.0.2224-changelog.txt
+/gradle.properties
+/LICENSE-new.txt
+/bin/
