--- a/Codeic/Codeic/Codeic.vcxproj.filters
+++ b/Codeic/Codeic/Codeic.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files\CSDL</Filter>
     </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
