--- a/Codeic/Codeic/Codeic.vcxproj
+++ b/Codeic/Codeic/Codeic.vcxproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <ClCompile Include="Codeic.cpp" />
     <ClCompile Include="Csdl.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
